Fix arrow border. Adjust flipped css class. Add nearest align edge #748

--- a/src/components/ids-popup/ids-popup.scss
+++ b/src/components/ids-popup/ids-popup.scss
@@ -94,7 +94,7 @@
 
       &::after {
         border-right-width: 0;
-        left: -8px;
+        left: -9px;
         top: -8px;
       }
     }
